--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -89,7 +89,7 @@
 <script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ "/js/blog.min.js " | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/shark-blog.min.js " | prepend: site.baseurl }}"></script>
 
 
 <!-- async load function -->
